--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.8.2
+Brotli==1.0.9
 certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.6
@@ -7,15 +8,19 @@ idna==2.10
 isort==5.9.3
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+mutagen==1.46.0
 platformdirs==2.4.0
+pycryptodomex==3.17
 pylint==2.11.1
 pyTelegramBotAPI==4.1.1
 python-dotenv==0.19.1
 requests==2.25.1
 six==1.16.0
 toml==0.10.2
+typed-ast==1.4.3
 typing-extensions==3.10.0.2
 urllib3==1.26.7
 validators==0.18.2
+websockets==11.0
 wrapt==1.12.1
-youtube-dl==2021.12.17
+yt-dlp==2023.3.4
