--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,29 @@
-astroid==2.8.2
-Brotli==1.0.9
-certifi==2021.10.8
-chardet==4.0.0
-charset-normalizer==2.0.6
-decorator==5.1.0
-idna==2.10
-isort==5.9.3
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-mutagen==1.46.0
-platformdirs==2.4.0
-pycryptodomex==3.17
-pylint==2.11.1
-pyTelegramBotAPI==4.1.1
-python-dotenv==0.19.1
-requests==2.25.1
-six==1.16.0
+astroid==3.3.8
+Brotli==1.1.0
+certifi==2025.1.31
+chardet==5.2.0
+charset-normalizer==3.4.1
+decorator==5.1.1
+dill==0.3.9
+idna==3.10
+isort==6.0.0
+lazy-object-proxy==1.10.0
+mccabe==0.7.0
+mutagen==1.47.0
+platformdirs==4.3.6
+pycryptodomex==3.21.0
+pylint==3.3.4
+pyTelegramBotAPI==4.26.0
+python-dotenv==1.0.1
+requests==2.32.3
+six==1.17.0
 toml==0.10.2
-typed-ast==1.4.3
-typing-extensions==3.10.0.2
-urllib3==1.26.7
-validators==0.18.2
-websockets==11.0
-wrapt==1.12.1
-yt-dlp==2023.7.6
+tomli==2.2.1
+tomlkit==0.13.2
+typed-ast==1.5.5
+typing_extensions==4.12.2
+urllib3==2.3.0
+validators==0.34.0
+websockets==14.2
+wrapt==1.17.2
+yt-dlp==2025.1.26
